# n5_assestment

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
docker/: docker.env  entrypoint.sh
n5_assessment/: asgi.py  urls.py  wsgi.py
n5_assessment/settings/: base.py
tests/: test_transit_tickets.py
transit_tickets/: admin.py  apps.py  models.py
transit_tickets/api/: schemas.py  v1.py
transit_tickets/migrations/: 0001_initial.py  0002_ticket.py  0003_rename_datetime_ticket_infraction_date.py  0004_officertoken.py  0005_driver_email_ticket_officer_alter_officertoken_token.py  0006_remove_driver_document_id_alter_officertoken_token.py
